Updated .atk-table component.

--- a/playground/index.html
+++ b/playground/index.html
@@ -1710,8 +1710,44 @@
 									</div>
 								</div>
 								<h3>Tables</h3>
+								<p><span class="atk-label atk-effect-info">.atk-table</span></p>
 								<div class="atk-box">
 									<div class="atk-table">
+										<table>
+											<thead>
+												<tr>
+													<th>1</th>
+													<th>2</th>
+													<th>3</th>
+													<th>4</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>1</td>
+													<td>2</td>
+													<td>3</td>
+													<td>4</td>
+												</tr>
+												<tr>
+													<td>1</td>
+													<td>2</td>
+													<td>3</td>
+													<td>4</td>
+												</tr>
+												<tr>
+													<td>1</td>
+													<td>2</td>
+													<td>3</td>
+													<td>4</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+								<p><span class="atk-label atk-effect-info">.atk-table</span> with <span class="atk-label atk-effect-info">.atk-table-bordered</span> class on.</p>
+								<div class="atk-box">
+									<div class="atk-table atk-table-bordered">
 										<table>
 											<thead>
 												<tr>
@@ -1744,22 +1780,57 @@
 													<td>4</td>
 													<td>5</td>
 												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+								<p><span class="atk-label atk-effect-info">.atk-table</span> with <span class="atk-label atk-effect-info">.atk-table-bordered</span> and <span class="atk-label atk-effect-info">.atk-table-zebra</span> classes on. Combined with <span class="atk-label atk-effect-info">.atk-box</span> component.</p>
+								<div class="atk-box">
+									<div class="atk-table atk-table-zebra atk-table-bordered">
+										<div class="atk-box-small atk-actions">
+											<span class="atk-input-icon atk-move-right"><input type="password" placeholder="Password" /><a href="#" class="icon-search atk-swatch-ink"></a></span>
+											<button class="atk-button">Add</button>
+											<button class="atk-button atk-effect-danger">Delete</button>
+										</div>
+										<table>
+											<thead>
+												<tr>
+													<th>1</th>
+													<th>2</th>
+													<th>3</th>
+													<th>4</th>
+												</tr>
+											</thead>
+											<tbody>
 												<tr>
 													<td>1</td>
 													<td>2</td>
 													<td>3</td>
 													<td>4</td>
-													<td>5</td>
 												</tr>
 												<tr>
 													<td>1</td>
 													<td>2</td>
 													<td>3</td>
 													<td>4</td>
-													<td>5</td>
+												</tr>
+												<tr>
+													<td>1</td>
+													<td>2</td>
+													<td>3</td>
+													<td>4</td>
 												</tr>
 											</tbody>
 										</table>
+										<div class="atk-box-small atk-actions atk-align-center">
+											<a href="#">&laquo; Prev</a>
+											<a href="#">1</a>
+											<a href="#">2</a>
+											<a href="#">3</a>
+											<a href="#">4</a>
+											<a href="#">5</a>
+											<a href="#">Next &raquo;</a>
+										</div>
 									</div>
 								</div>
 								<p><span class="atk-label atk-effect-warning"><span class="icon-attention"></span></span>&nbsp;<span class="atk-label atk-effect-info">.atk-table</span> widget combined with <span class="atk-label atk-effect-info">.atk-cells</span> and <span class="atk-label atk-effect-info">.atk-label</span> components.</p>
