Fix in table's top panel.

--- a/playground/index.html
+++ b/playground/index.html
@@ -1787,10 +1787,12 @@
 								<p><span class="atk-label atk-effect-info">.atk-table</span> with <span class="atk-label atk-effect-info">.atk-table-bordered</span> and <span class="atk-label atk-effect-info">.atk-table-zebra</span> classes on. Combined with <span class="atk-label atk-effect-info">.atk-box</span> component.</p>
 								<div class="atk-box">
 									<div class="atk-table atk-table-zebra atk-table-bordered">
-										<div class="atk-box-small atk-actions">
+										<div class="atk-box-small">
 											<span class="atk-input-icon atk-move-right"><input type="password" placeholder="Password" /><a href="#" class="icon-search atk-swatch-ink"></a></span>
-											<button class="atk-button">Add</button>
-											<button class="atk-button atk-effect-danger">Delete</button>
+											<div class="atk-actions">
+												<button class="atk-button">Add</button>
+												<button class="atk-button atk-effect-danger">Delete</button>
+											</div>
 										</div>
 										<table>
 											<thead>
