Renamed password field in table's top panel.

--- a/playground/index.html
+++ b/playground/index.html
@@ -1788,7 +1788,7 @@
 								<div class="atk-box">
 									<div class="atk-table atk-table-zebra atk-table-bordered">
 										<div class="atk-box-small">
-											<span class="atk-input-icon atk-move-right"><input type="password" placeholder="Password" /><a href="#" class="icon-search atk-swatch-ink"></a></span>
+											<span class="atk-input-icon atk-move-right"><input type="text" placeholder="Search" /><a href="#" class="icon-search atk-swatch-ink"></a></span>
 											<div class="atk-actions">
 												<button class="atk-button">Add</button>
 												<button class="atk-button atk-effect-danger">Delete</button>
