Added sorting feature for .atk-table widget.

--- a/playground/index.html
+++ b/playground/index.html
@@ -1790,37 +1790,44 @@
 										<div class="atk-box-small">
 											<span class="atk-input-icon atk-move-right"><input type="text" placeholder="Search" /><a href="#" class="icon-search atk-swatch-ink"></a></span>
 											<div class="atk-actions">
-												<button class="atk-button">Add</button>
-												<button class="atk-button atk-effect-danger">Delete</button>
+												<button class="atk-button">Add</button><button class="atk-button atk-effect-danger">Delete</button>
 											</div>
 										</div>
 										<table>
 											<thead>
 												<tr>
-													<th>1</th>
-													<th>2</th>
-													<th>3</th>
-													<th>4</th>
+													<th><input type="checkbox"></th>
+													<th class="atk-text-nowrap atk-table-sort">
+														<a href="#"><span class="icon-down-dir"></span>Name</a>
+													</th>
+													<th>Description</th>
+													<th>Actions</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-													<td>1</td>
-													<td>2</td>
-													<td>3</td>
-													<td>4</td>
+													<td><input type="checkbox"></td>
+													<td class="atk-text-nowrap">Brian O'Connell</td>
+													<td class="atk-jackscrew">Nullam convallis ipsum nec lacus pharetra congue.</td>
+													<td class="atk-align-center"><a href="#">Edit</a></td>
 												</tr>
 												<tr>
-													<td>1</td>
-													<td>2</td>
-													<td>3</td>
-													<td>4</td>
+													<td><input type="checkbox"></td>
+													<td class="atk-text-nowrap">Danny Brown</td>
+													<td class="atk-jackscrew">Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.</td>
+													<td class="atk-align-center"><a href="#">Edit</a></td>
 												</tr>
 												<tr>
-													<td>1</td>
-													<td>2</td>
-													<td>3</td>
-													<td>4</td>
+													<td><input type="checkbox"></td>
+													<td class="atk-text-nowrap">John Smith</td>
+													<td class="atk-jackscrew">Sed varius nulla sodales hendrerit eleifend.</td>
+													<td class="atk-align-center"><a href="#">Edit</a></td>
+												</tr>
+												<tr>
+													<td><input type="checkbox"></td>
+													<td class="atk-text-nowrap">Satya Nadella</td>
+													<td class="atk-jackscrew">Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.</td>
+													<td class="atk-align-center"><a href="#">Edit</a></td>
 												</tr>
 											</tbody>
 										</table>
@@ -1828,68 +1835,28 @@
 											<a href="#">&laquo; Prev</a>
 											<a href="#">1</a>
 											<a href="#">2</a>
-											<a href="#">3</a>
+											<strong>3</strong>
 											<a href="#">4</a>
 											<a href="#">5</a>
 											<a href="#">Next &raquo;</a>
 										</div>
 									</div>
 								</div>
-								<p><span class="atk-label atk-effect-warning"><span class="icon-attention"></span></span>&nbsp;<span class="atk-label atk-effect-info">.atk-table</span> widget combined with <span class="atk-label atk-effect-info">.atk-cells</span> and <span class="atk-label atk-effect-info">.atk-label</span> components.</p>
+								<p>No results found.</p>
 								<div class="atk-box">
-									<div class="atk-table">
+									<div class="atk-table atk-table-zebra atk-table-bordered">
+										<div class="atk-box-small">
+											<span class="atk-input-icon atk-move-right"><input type="text" placeholder="Search" /><a href="#" class="icon-search atk-swatch-ink"></a></span>
+											<div class="atk-actions">
+												<button class="atk-button">Add</button><button class="atk-button atk-effect-danger">Delete</button>
+											</div>
+										</div>
 										<table>
-											<thead>
-												<tr>
-													<th class="atk-swatch-ink">Product Type</th>
-													<th class="atk-swatch-ink">Weight</th>
-													<th class="atk-swatch-ink">Phone</th>
-													<th class="atk-swatch-ink">Email</th>
-													<th class="atk-swatch-ink">Status</th>
-												</tr>
-											</thead>
 											<tbody>
 												<tr>
-													<td>
-														<div class="atk-cells atk-cells-gutter-small">
-															<div class="atk-cell">
-																<img src="temp/fruits.jpg" alt="Fruits" class="atk-circled" width="32" />
-															</div>
-															<div class="atk-cell atk-jackscrew"><a href="#">Fruits</a></div>
-														</div>
+													<td class="atk-padding-large atk-align-center">
+														<span class="atk-label atk-effect-warning"><span class="icon-attention"></span> No results found.</span>
 													</td>
-													<td class='atk-text-nowrap'>25.00 kg</td>
-													<td class='atk-text-nowrap'>777-002-3578</td>
-													<td class='atk-text-nowrap'><a href="#">john@microsoft.com</a></td>
-													<td class='atk-text-nowrap'><span class="atk-label atk-effect-danger">Declined</span></td>
-												</tr>
-												<tr>
-													<td>
-														<div class="atk-cells atk-cells-gutter-small">
-															<div class="atk-cell">
-																<img src="temp/fruits.jpg" alt="Fruits" class="atk-circled" width="32" />
-															</div>
-															<div class="atk-cell atk-jackscrew"><a href="#">Fruits</a></div>
-														</div>
-													</td>
-													<td class='atk-text-nowrap'>25.00 kg</td>
-													<td class='atk-text-nowrap'>777-002-3578</td>
-													<td class='atk-text-nowrap'><a href="#">john@microsoft.com</a></td>
-													<td class='atk-text-nowrap'><span class="atk-label atk-effect-danger">Declined</span></td>
-												</tr>
-												<tr>
-													<td>
-														<div class="atk-cells atk-cells-gutter-small">
-															<div class="atk-cell">
-																<img src="temp/fruits.jpg" alt="Fruits" class="atk-circled" width="32" />
-															</div>
-															<div class="atk-cell atk-jackscrew"><a href="#">Fruits</a></div>
-														</div>
-													</td>
-													<td class='atk-text-nowrap'>25.00 kg</td>
-													<td class='atk-text-nowrap'>777-002-3578</td>
-													<td class='atk-text-nowrap'><a href="#">john@microsoft.com</a></td>
-													<td class='atk-text-nowrap'><span class="atk-label atk-effect-danger">Declined</span></td>
 												</tr>
 											</tbody>
 										</table>
