Added submenu support for .atk-menu-vertical widget.

--- a/playground/index.html
+++ b/playground/index.html
@@ -194,15 +194,7 @@
 									</div>
 								</div>
 								<h3>Buttons</h3>
-								<p>a tags</p>
-								<div class="atk-box atk-actions atk-inline">
-									<a href="#" class="atk-button-small">.atk-button-small</a><a href="#" class="atk-button atk-swatch-yellow">.atk-button</a><a href="#" class="atk-button-large atk-swatch-ink">.atk-button-large</a>
-								</div>
-								<p>input tags</p>
-								<div class="atk-box atk-actions atk-inline">
-									<input type="button" class="atk-button-small" value=".atk-button-small"/><input type="button" class="atk-button atk-swatch-yellow" value=".atk-button"/><input type="button" class="atk-button-large atk-swatch-ink" value=".atk-button-large"/>
-								</div>
-								<p>button tags</p>
+								<p><span class="atk-label atk-effect-info">.atk-button</span> component can be applied on any tag.</p>
 								<div class="atk-box atk-actions atk-inline">
 									<button class="atk-button-small">.atk-button-small</button><button class="atk-button atk-swatch-yellow">.atk-button</button><button href="#" class="atk-button-large atk-swatch-ink">.atk-button-large</button>
 								</div>
@@ -217,17 +209,17 @@
 								<div class="atk-box atk-inline">
 									<ul class="atk-menu-horizontal">
 										<li class="atk-swatch-green">
-											<a href="#" class="atk-padding atk-swatch-ink">Item #1</a>
+											<a href="#" class="atk-padding atk-swatch-ink">Item #1 <span class="icon-down-dir"></span></a>
 											<ul class="atk-menu-horizontal">
 												<li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #1</a></li><li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #2</a></li><li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #3</a></li><li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #4</a></li><li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #5</a></li>
 											</ul>
 										</li><li class="atk-swatch-blue">
-											<a href="#" class="atk-padding atk-swatch-ink">Item #2</a>
+											<a href="#" class="atk-padding atk-swatch-ink">Item #2 <span class="icon-down-dir"></span></a>
 											<ul class="atk-menu-vertical">
 												<li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #1</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #2</a></li>
 											</ul>
 										</li><li>
-											<a href="#" class="atk-padding atk-swatch-ink">Item #3</a>
+											<a href="#" class="atk-padding atk-swatch-ink">Item #3 <span class="icon-down-dir"></span></a>
 											<ul class="atk-menu-vertical">
 												<li><a href="#" class="atk-padding-small atk-swatch-ink">Subitem #1</a></li><li><a href="#" class="atk-padding-small atk-swatch-ink">Subitem #2</a></li>
 											</ul>
@@ -250,17 +242,38 @@
 												<span class="atk-cell"><span class="atk-label atk-size-milli atk-shape-circle atk-swatch-green">1</span></span>
 											</a>
 										</li>
-										<li>
+										<li class="atk-swatch-green">
 											<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
 												<span class="atk-cell atk-jackscrew"><span class="icon-chart-line"></span>&nbsp;<strong>Analytics</strong></span>
-												<span class="atk-cell"></span>
+												<span class="atk-cell"><span class="icon-right-dir"></span></span>
 											</a>
+											<ul class="atk-menu-horizontal">
+												<li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #1</a></li><li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #2</a></li><li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #3</a></li><li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #4</a></li><li><a href="#" class="atk-padding-small atk-swatch-green">Subitem #5</a></li>
+											</ul>
 										</li>
 										<li>
 											<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
 												<span class="atk-cell atk-jackscrew"><span class="icon-tools"></span>&nbsp;<strong>Settings</strong></span>
 												<span class="atk-cell"><span class="atk-size atk-swatch-yellow icon-attention"></span></span>
 											</a>
+										</li>
+										<li class="atk-swatch-blue">
+											<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
+												<span class="atk-cell atk-jackscrew"><span class="icon-lifebuoy"></span>&nbsp;<strong>Support</strong></span>
+												<span class="atk-cell"><span class="icon-right-dir"></span></span>
+											</a>
+											<ul class="atk-menu-vertical">
+												<li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #1</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #2</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #3</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #4</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #5</a></li>
+											</ul>
+										</li>
+										<li class="atk-swatch-blue">
+											<a href="#" class="atk-padding-small atk-swatch-ink atk-cells">
+												<span class="atk-cell atk-jackscrew"><span class="icon-chat-empty"></span>&nbsp;<strong>Forums</strong></span>
+												<span class="atk-cell"><span class="icon-right-dir"></span></span>
+											</a>
+											<ul class="atk-menu-horizontal">
+												<li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #1</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #2</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #3</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #4</a></li><li><a href="#" class="atk-padding-small atk-swatch-blue">Subitem #5</a></li>
+											</ul>
 										</li>
 									</ul>
 								</div>
