Introduced .atk-bar widget. Fix in .atk-label.

--- a/playground/index.html
+++ b/playground/index.html
@@ -1878,25 +1878,25 @@
 								<h4>Navigation Bar</h4>
 								<p>Combination of <span class="atk-label atk-effect-info">.atk-cells</span>, <span class="atk-label atk-effect-info">.atk-swatch-*</span> and <span class="atk-label atk-effect-info">.atk-padding</span> components. The best used as a header on a fluid page.</p>
 								<div class="atk-box">
-									<div class="atk-cells atk-cells-gutter-large atk-swatch-ink atk-padding-small">
+									<div class="atk-bar atk-cells atk-cells-gutter-large atk-swatch-ink atk-padding-small">
 										<div class="atk-cell">
 											<a href="#" class="atk-size-kilo"><strong>Logo</strong></a>
 										</div>
 										<div class="atk-cell atk-jackscrew">
-											<ul class="atk-menu atk-menu-horizontal">
-												<li class="atk-state-active"><a href="#">Item 1</a></li>
-												<li><a href="#">Item 2</a></li>
-												<li><a href="#">Item 3</a></li>
+											<ul class="atk-menu-horizontal">
+												<li class="atk-state-active"><a href="#" class="atk-padding-small">Item 1</a></li>
+												<li><a href="#" class="atk-padding-small">Item 2</a></li>
+												<li><a href="#" class="atk-padding-small">Item 3</a></li>
 											</ul>
 										</div>
-										<div class="atk-cell">
+										<div class="atk-cell atk-text-nowrap">
 											<div class="atk-actions">
 												<a href="#" class="atk-label atk-swatch-yellow">Upgrade</a><span class="atk-sep">&sdot;</span><a href="#">Help</a>
 											</div>
 										</div>
 										<div class="atk-cell atk-text-nowrap">
 											<div class="atk-cells atk-cells-gutter-small">
-												<div class="atk-cell">
+												<div class="atk-cell atk-text-reset">
 													<img src="temp/apples.jpg" alt="Apples" width="32" class="atk-shape-circle" />
 												</div>
 												<div class="atk-cell">John Smith<span class="icon-down-dir"></span></div>
@@ -1907,25 +1907,25 @@
 								<h4>Boxed Navigation Bar</h4>
 								<p>Combination of <span class="atk-label atk-effect-info">.atk-cells</span>, <span class="atk-label atk-effect-info">.atk-swatch-*</span> and <span class="atk-label atk-effect-info">.atk-box</span> components. The best used as a boxed type header.</p>
 								<div class="atk-box">
-									<div class="atk-cells atk-cells-gutter-large atk-swatch-ink atk-box-small">
+									<div class="atk-bar atk-cells atk-cells-gutter-large atk-swatch-ink atk-box-small">
 										<div class="atk-cell">
 											<a href="#" class="atk-size-kilo"><strong>Logo</strong></a>
 										</div>
 										<div class="atk-cell atk-jackscrew">
-											<ul class="atk-menu atk-menu-horizontal">
-												<li class="atk-state-active"><a href="#">Item 1</a></li>
-												<li><a href="#">Item 2</a></li>
-												<li><a href="#">Item 3</a></li>
+											<ul class="atk-menu-horizontal">
+												<li class="atk-state-active"><a href="#" class="atk-padding-small">Item 1</a></li>
+												<li><a href="#" class="atk-padding-small">Item 2</a></li>
+												<li><a href="#" class="atk-padding-small">Item 3</a></li>
 											</ul>
 										</div>
-										<div class="atk-cell">
+										<div class="atk-cell atk-text-nowrap">
 											<div class="atk-actions">
 												<a href="#" class="atk-label atk-swatch-yellow">Upgrade</a><span class="atk-sep">&sdot;</span><a href="#">Help</a>
 											</div>
 										</div>
 										<div class="atk-cell atk-text-nowrap">
 											<div class="atk-cells atk-cells-gutter-small">
-												<div class="atk-cell">
+												<div class="atk-cell atk-text-reset">
 													<img src="temp/apples.jpg" alt="Apples" width="32" class="atk-shape-circle" />
 												</div>
 												<div class="atk-cell">John Smith<span class="icon-down-dir"></span></div>
@@ -1938,16 +1938,21 @@
 								<div class="atk-box">
 									<div class="atk-swatch-ink">
 										<div class="atk-move-center span_8">
-											<div class="atk-cells atk-cells-gutter atk-section-small">
+											<div class="atk-bar atk-cells atk-cells-gutter atk-section-small">
 												<div class="atk-cell">
 													<a href="#" class="atk-size-kilo"><strong>Logo</strong></a>
 												</div>
 												<div class="atk-cell atk-jackscrew">
-													<ul class="atk-menu atk-menu-horizontal atk-move-right">
-														<li class="atk-state-active"><a href="#">Item 1</a></li>
-														<li><a href="#">Item 2</a></li>
-														<li><a href="#">Item 3</a></li>
+													<ul class="atk-menu-horizontal">
+														<li class="atk-state-active"><a href="#" class="atk-padding-small">Item 1</a></li>
+														<li><a href="#" class="atk-padding-small">Item 2</a></li>
+														<li><a href="#" class="atk-padding-small">Item 3</a></li>
 													</ul>
+												</div>
+												<div class="atk-cell atk-text-nowrap">
+													<div class="atk-actions">
+														<a href="#" class="atk-label atk-swatch-yellow">Upgrade</a><span class="atk-sep">&sdot;</span><a href="#">Help</a>
+													</div>
 												</div>
 											</div>
 										</div>
