--- a/playground/index.html
+++ b/playground/index.html
@@ -1878,14 +1878,14 @@
 								<h4>Navigation Bar</h4>
 								<p>Combination of <span class="atk-label atk-effect-info">.atk-cells</span>, <span class="atk-label atk-effect-info">.atk-swatch-*</span> and <span class="atk-label atk-effect-info">.atk-padding</span> components. The best used as a header on a fluid page.</p>
 								<div class="atk-box">
-									<div class="atk-bar atk-cells atk-cells-gutter-large atk-swatch-ink atk-padding-small">
+									<div class="atk-cells atk-cells-gutter-large atk-swatch-ink atk-padding-small">
 										<div class="atk-cell">
 											<a href="#" class="atk-size-kilo"><strong>Logo</strong></a>
 										</div>
 										<div class="atk-cell atk-jackscrew">
 											<ul class="atk-menu-horizontal">
 												<li class="atk-state-active"><a href="#" class="atk-padding-small">Item 1</a></li>
-												<li><a href="#" class="atk-padding-small">Item 2</a></li>
+												<li><a href="#" class="atk-padding-small">Item 2 <span class="atk-label atk-size-milli atk-shape-rounded atk-swatch-green">12</span></a></li>
 												<li><a href="#" class="atk-padding-small">Item 3</a></li>
 											</ul>
 										</div>
@@ -1907,7 +1907,7 @@
 								<h4>Boxed Navigation Bar</h4>
 								<p>Combination of <span class="atk-label atk-effect-info">.atk-cells</span>, <span class="atk-label atk-effect-info">.atk-swatch-*</span> and <span class="atk-label atk-effect-info">.atk-box</span> components. The best used as a boxed type header.</p>
 								<div class="atk-box">
-									<div class="atk-bar atk-cells atk-cells-gutter-large atk-swatch-ink atk-box-small">
+									<div class="atk-cells atk-cells-gutter-large atk-swatch-ink atk-box-small">
 										<div class="atk-cell">
 											<a href="#" class="atk-size-kilo"><strong>Logo</strong></a>
 										</div>
@@ -1938,7 +1938,7 @@
 								<div class="atk-box">
 									<div class="atk-swatch-ink">
 										<div class="atk-move-center span_8">
-											<div class="atk-bar atk-cells atk-cells-gutter atk-section-small">
+											<div class="atk-cells atk-cells-gutter atk-section-small">
 												<div class="atk-cell">
 													<a href="#" class="atk-size-kilo"><strong>Logo</strong></a>
 												</div>
