Text change in the playground.

--- a/playground/index.html
+++ b/playground/index.html
@@ -1897,7 +1897,7 @@
 								</div>
 
 								<!-- [Widget] Table: With Expander -->
-								<p><span class="atk-label atk-effect-info">.atk-table</span> widget with <span class="atk-label atk-effect-info">.atk-table-expander</span>. Click anywhere in a table row to expand it.</p>
+								<p><span class="atk-label atk-effect-info">.atk-table</span> widget with <span class="atk-label atk-effect-info">.atk-table-expander</span>. Click on a table row to expand it.</p>
 								<div class="atk-box" id="table-expander">
 									<div class="atk-table atk-table-border">
 										<table>
