.atk-table-border renamed to .atk-border-outline

--- a/playground/index.html
+++ b/playground/index.html
@@ -1811,9 +1811,9 @@
 								</div>
 
 								<!-- [Widget] Table: Bordered -->
-								<p><span class="atk-label atk-effect-info">.atk-table</span> widget with <span class="atk-label atk-effect-info">.atk-table-border</span> class on.</p>
+								<p><span class="atk-label atk-effect-info">.atk-table</span> widget with <span class="atk-label atk-effect-info">.atk-table-outline</span> class on.</p>
 								<div class="atk-box">
-									<div class="atk-table atk-table-border">
+									<div class="atk-table atk-table-outline">
 										<table>
 											<thead>
 												<tr>
@@ -1899,7 +1899,7 @@
 								<!-- [Widget] Table: With Expander -->
 								<p><span class="atk-label atk-effect-info">.atk-table</span> widget with <span class="atk-label atk-effect-info">.atk-table-expander</span>. Click on a table row to expand it.</p>
 								<div class="atk-box" id="table-expander">
-									<div class="atk-table atk-table-border">
+									<div class="atk-table atk-table-outline">
 										<table>
 											<thead>
 												<tr>
