Fixed bugs in menu widget.

--- a/playground/index.html
+++ b/playground/index.html
@@ -2369,17 +2369,17 @@
 		<!-- /Content -->
 
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/core.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/widget.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/position.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/menu.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/tabs.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/datepicker.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/selectmenu.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/accordion.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/dialog.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/button.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/core.js"></script>
+        <script src="js/widget.js"></script>
+        <script src="js/position.js"></script>
+        <script src="js/menu.js"></script>
+        <script src="js/tabs.js"></script>
+        <script src="js/datepicker.js"></script>
+        <script src="js/selectmenu.js"></script>
+        <script src="js/accordion.js"></script>
+        <script src="js/dialog.js"></script>
+        <script src="js/button.js"></script>
         <script src="js/atk-helpers-min.js"></script>
         <script src="js/demo.js"></script>
 
