Fixed padding bug in forms.

--- a/playground/index.html
+++ b/playground/index.html
@@ -2219,7 +2219,7 @@
 									<button class="atk-button" id="opener">Open Dialog</button>
 								</div>
 								<div id="dialog" title="Basic dialog">
-								  <p>Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+								  <p class="atk-push">Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
 									<div class="atk-form atk-form-stacked atk-form-compact">
 										<form>
 											<div class="atk-form-fieldset">
