Fixed atk-swatch bug for 2 level menus.

--- a/playground/index.html
+++ b/playground/index.html
@@ -231,7 +231,7 @@
 									<ul class="atk-menu-vertical">
 										<li class="atk-padding-small atk-swatch-ink atk-size-kilo">Navigation</li>
 										<li>
-											<a href="javascript:void(0)" class="atk-padding-small atk-swatch-ink atk-cells">
+											<a href="javascript:void(0)" class="atk-padding-small atk-swatch-gray atk-cells">
 												<span class="atk-cell atk-jackscrew"><span class="icon-gauge-1"></span>&nbsp;<strong>Dashboard</strong></span>
 												<span class="atk-cell"><span class="atk-label atk-size-milli atk-swatch-blue">253</span></span>
 											</a>
@@ -243,7 +243,7 @@
 											</a>
 										</li>
 										<li class="atk-swatch-green">
-											<a href="javascript:void(0)" class="atk-padding-small atk-swatch-ink atk-cells">
+											<a href="javascript:void(0)" class="atk-padding-small atk-swatch-gray atk-cells">
 												<span class="atk-cell atk-jackscrew"><span class="icon-chart-line"></span>&nbsp;<strong>Analytics</strong></span>
 												<span class="atk-cell"><span class="icon-right-dir"></span></span>
 											</a>
@@ -2219,7 +2219,7 @@
 									<button class="atk-button" id="opener">Open Dialog</button>
 								</div>
 								<div id="dialog" title="Basic dialog">
-								  <p class="atk-push">Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+								  <p class="atk-push-small">Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
 									<div class="atk-form atk-form-stacked atk-form-compact">
 										<form>
 											<div class="atk-form-fieldset">
